<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/top_constrait"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0">

    <LinearLayout
        android:id="@+id/classic"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/today_s_workout"
            android:textColor="@color/white2"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="8dp"
            android:layout_marginTop="0dp"
            android:background="@color/orange1"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/brain"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="372dp"
            android:layout_height="62dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white2"
            android:text="@string/start_workout"
            android:background="@drawable/button_bg_lightorange"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bot_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_constrait">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/favorites"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:background="@drawable/button_bg_lightgray"
            android:gravity="center"
            android:text="Favorites"

            android:textColor="@color/white2"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bot_constraint" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Quick"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_lightgray"
            android:gravity="center"
            android:text="Quick"
            android:textColor="@color/white2"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorites" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Language"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_lightgray"
            android:gravity="center"
            android:text="Classic"
            android:textColor="@color/white2"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Quick" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>